fix form field spacing

--- a/proparty-child-style.css
+++ b/proparty-child-style.css
@@ -523,6 +523,9 @@ form td {
 #contribution label .radio:last-child {
   margin: 0; }
 
+#signup .text {
+  margin-bottom: 1.5rem; }
+
 html {
   box-sizing: border-box; }
 
