--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -118,3 +118,7 @@ form {
 #contribution label .radio:last-child {
     margin: 0;
 }
+
+#signup .text {
+    margin-bottom: $base-spacing; 
+}
